<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014 barter.li
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:padding="@dimen/activity_margin" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/label_collaborate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_minimum"
            android:text="@string/text_collaborate"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/text_large"
            android:textAppearance="@style/TextAppearance.FontPath.Roboto.Condensed" />

        <RadioGroup
            android:id="@+id/radio_enlist_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_collaborate"
            android:layout_margin="@dimen/margin_minimum"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radio_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campus_ambassador"
                android:textAppearance="@style/TextAppearance.FontPath.Roboto.Condensed" />

            <RadioButton
                android:id="@+id/radio_designer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/designer"
                android:textAppearance="@style/TextAppearance.FontPath.Roboto.Condensed" />

            <RadioButton
                android:id="@+id/radio_developer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer"
                android:textAppearance="@style/TextAppearance.FontPath.Roboto.Condensed" />
            
            <RadioButton
                android:id="@+id/radio_marketing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marketing"
                android:textAppearance="@style/TextAppearance.FontPath.Roboto.Condensed" />
            

            <RadioButton
                android:id="@+id/radio_product_evangelist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_evangelist"
                android:textAppearance="@style/TextAppearance.FontPath.Roboto.Condensed" />
            
            
            <RadioButton
                android:id="@+id/radio_sponsor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sponsor"
                android:textAppearance="@style/TextAppearance.FontPath.Roboto.Condensed" />

            
            
             
        </RadioGroup>

        <EditText
            android:id="@+id/text_about_me"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radio_enlist_options"
            android:layout_margin="@dimen/margin_medium"
            android:hint="@string/hint_about_me_description"
            android:inputType="textCapSentences"
            android:lines="4"
            android:singleLine="false"
            android:textSize="@dimen/text_medium"
            android:textAppearance="@style/TextAppearance.FontPath.Roboto" />

        <Button
            android:id="@+id/button_submit_enlisting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_about_me"
            android:layout_margin="@dimen/margin_medium"
            android:text="@string/button_submit"
            android:textSize="@dimen/text_medium"
            android:textAppearance="@style/TextAppearance.FontPath.Roboto.Bold" />
    </RelativeLayout>

</ScrollView>