<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/global_bg"
    android:padding="@dimen/activity_margin"
    android:visibility="visible" >

    <li.barter.widgets.TypefacedTextView
        android:id="@+id/label_no_books_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_huge"
        android:text="@string/no_places_found_nearby"
        android:textColor="@color/black"
        android:textSize="@dimen/text_big"
        app:fontStyle="regular" />

    <li.barter.widgets.TypefacedTextView
        android:id="@+id/text_try_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_no_books_found"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/try_again"
        android:textColor="@color/apptheme_color"
        android:textSize="@dimen/text_large"
        app:fontStyle="bold" />

    <li.barter.widgets.TypefacedTextView
        android:id="@+id/label_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_try_again"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="@dimen/text_big"
        app:fontStyle="regular" />

    <li.barter.widgets.TypefacedTextView
        android:id="@+id/text_add_manually"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_or"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/add_location_manually"
        android:textColor="@color/apptheme_color"
        android:textSize="@dimen/text_large"
        app:fontStyle="bold" />

</RelativeLayout>