<!--
  Copyright 2014, barter.li
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:padding="@dimen/activity_margin">

    <RelativeLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/book_avatar"
            android:layout_width="@dimen/book_image_width"
            android:layout_height="@dimen/book_image_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="@dimen/margin_minimum"
            android:contentDescription="@string/app_name"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:paddingTop="1dp"
            android:paddingBottom="2dp"
            android:background="@drawable/background_container_drop_shadow"/>

        <li.barter.widgets.TypefacedTextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/book_avatar"
            android:layout_alignTop="@id/book_avatar"
            android:ellipsize="end"
            android:maxLines="3"
            android:hint="@string/title_unavailable"
            android:gravity="left|center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/text_big"
            app:fontStyle="slab_regular"/>

        <li.barter.widgets.TypefacedTextView
            android:id="@+id/text_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_title"
            android:layout_alignLeft="@id/text_title"
            android:maxLines="2"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/text_small"
            android:hint="@string/author_unavailable"
            app:fontStyle="light"/>

        <RatingBar
            android:id="@+id/rating_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_x_small"
            android:stepSize="0.5"
            android:numStars="5"
            android:rating="0"
            style="@style/RatingBarAppTheme.Small"
            android:isIndicator="true"
            android:layout_below="@id/text_author"
            android:layout_alignLeft="@id/text_author"
            />

        <LinearLayout
            android:id="@+id/container_barter_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_below="@id/book_avatar"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="horizontal"
            android:visibility="gone">

            <li.barter.widgets.TypefacedButton
                android:id="@+id/button_barter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/button_text_color"
                app:fontStyle="bold"
                android:enabled="false"
                android:textSize="@dimen/text_medium"
                android:text="@string/barter"/>

            <li.barter.widgets.TypefacedButton
                android:id="@+id/button_buy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/button_text_color"
                app:fontStyle="bold"
                android:enabled="false"
                android:textSize="@dimen/text_medium"
                android:text="@string/buy"/>

            <li.barter.widgets.TypefacedButton
                android:id="@+id/button_borrow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/button_text_color"
                app:fontStyle="bold"
                android:enabled="false"
                android:textSize="@dimen/text_medium"
                android:text="@string/borrow"/>
        </LinearLayout>

        <li.barter.widgets.TypefacedTextView
            android:id="@+id/text_publication_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:layout_below="@id/container_barter_options"
            android:layout_marginTop="@dimen/margin_medium"
            android:textSize="@dimen/text_small"
            android:hint="@string/publication_date_unavailable"
            app:fontStyle="condensed_regular"/>

        <li.barter.widgets.TypefacedTextView
            android:id="@+id/text_isbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:layout_below="@id/text_publication_date"
            android:layout_marginTop="@dimen/margin_medium"
            android:textSize="@dimen/text_small"
            app:fontStyle="condensed_regular"
            android:hint="@string/isbn_unavailable"/>

        <li.barter.widgets.TypefacedTextView
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_isbn"
            android:layout_marginTop="@dimen/margin_large"
            android:textSize="@dimen/text_medium"
            app:fontStyle="regular"
            android:hint="@string/description_unavailable"/>

    </RelativeLayout>

</ScrollView>